--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
-    <string name="sign_up">Sign Up</string>
+    <string name="sign_upp">Sign Up</string>
     <string name="sign_in">Sign In</string>
     <string name="or">or</string>
     <string name="log_in">Log in</string>
