- Fixed to fit different screen sizes - Sign up button works after signing up - Variables identified - A toast on successful registration (method to check info is implemented, needs Mohsen code) - On successful log in, sign up activity shows up. it can be replaced later. - Get date (not sure of it or how to send it to the data base)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,10 @@
     <string name="reset_passpwrd">Reset Passpwrd</string>
     <string name="register" />
     <string name="sign_up">Sign Up</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="confirm_paaword">Confirm Paaword</string>
+    <string name="last_name">Last Name</string>
+    <string name="first_name">First Name</string>
+    <string name="phone_number">Phone Number</string>
 </resources>
